Added conclusions for relax

--- a/p7/relax_real.tex
+++ b/p7/relax_real.tex
@@ -1017,9 +1017,11 @@ $V_b$, $V_1$, $V_2$, $V_3$.
 эффективно использовать $q_{hv}$.
 
 Рассмотрим комбинированный критерий
-\[
+\begin{equation}
   q_{rv} = \frac{\overline{V_1+V_2+V_3}}{\overline{V_b}}.
-\]
+  \label{atu:eq:q_rv_relax}
+\end{equation}
+
 
 Анализ полученных зависимостей ~(рис.~\ref{atu:f:relax3d_q}, \ref{atu:f:relax3ds_q})
 даёт основания полагать, что данный критерий --- лучший среди рассмотренных.
@@ -1381,8 +1383,44 @@ $p_{ee}$.
 
 \section{Выводы по разделу \thechapter}
 
-Выводы.
+В целом, результаты экспериментов,
+моделирования динамики систем связанных релаксационных генераторов
+и процессов идентификации параметра $R_b$, определяющего величину этой связи,
+позволяют сделать следующие выводы:
 
-Воно працюэ!
+\begin{itemize}
+
+  \item
+    Система из трех связанных по цепи питания релаксационных генераторов,
+    в зависимости от величины этой связи, может
+    проявлять как практически независимые колебания,
+    так и сложно-периодическую и хаотическую динамику.
+
+
+  \item
+    Вид аттракторов этой системы в случае слабо-связанных колебаний,
+    является достаточно необычным: практически полностью заполненный
+    прямоугольный параллелепипед,
+    а вид аттрактора в хаотических режимах не является
+    модификацией аттракторов наиболее известных хаотических систем.
+
+
+  \item
+    Комбинированный критерий идентификации (\ref{atu:eq:q_rv_relax})
+    обеспечивает наилучшее качество идентификации из рассмотренных.
+
+  \item
+    Системы мультиагентной идентификации ``FAlvn5.3z''
+    продемонстрировали на реальных тестовых данных
+    хорошую работоспособность.
+
+  \item
+    Зависимости удельных ошибок идентификации \Cmt{TODO}
+
+  \item
+
+\end{itemize}
+
+
 
 
