--- a/p7/relax_real.tex
+++ b/p7/relax_real.tex
@@ -939,11 +939,68 @@ $V_b \gg V_i$ токами утечки можно пренебречь совс
 Конкретный вид утечки следует выбирать, исходя из поведения системы
 при условии $V_b \approx V_i$.
 
+Перед тем, как приступить к моделированию системы из связанных генераторов,
+необходимо было убедится, что результаты численного моделирования
+показывают адекватные результаты в том случае,
+когда возможно сравнить результаты не только с экспериментом,
+но и с теоретическими расчётами, то есть для одного генератора.
+Для проведения этой проверки в системе ``relax3d''
+были отключены второй и третий генераторы. При этом, нет необходимости
+отслеживать сигнал $V_b(t)$, и в этом эксперименте под величиной
+$R_1$ будет подразумеваться сумма $R_1 + R_b$.
 
-\Cmt{если надо: модели в ``qontrol'' c одним / тремя релаксаторами, графики сравнения?}
+При проведении проверки адекватности была проведена серия экспериментов
+при различных значения $R_1$. В первую очередь было проведено визуальное сравнение
+сигналов $V_{1o}(t)$ и $V_{1m}(t)$. Результаты сравнения (пример см.~рис.~\ref{atu:f:relax1d_read_cmp-p_t_r1})
+с одной стороны, показывают, что в целом, форма сигналов сигналов достаточно хорошо совпадают,
+с учётом разности фаз, которая в реальном эксперименте никак не контролировалась. С другой стороны,
+этот график позволяет определить уровень шумов измерения, размах которых
+составляет порядка $\SI{20}{\milli\volt}$, что для рассматриваемых условий
+является вполне допустимым.
 
 
 
+\begin{figure}[htb!]
+  \centerline{\includegraphics[width=0.6\textwidth]{p/relax1d_read_cmp-p_t_r1=130k.png} }
+  \caption{Зависимости $V_1(t)$ полученные в реальном эксперименте, в сравнении результатами моделирования при $R_1=\SI{130}{\kilo\ohm}$ }
+  \label{atu:f:relax1d_read_cmp-p_t_r1}
+\end{figure}
+
+Полученная форма сигнала также свидетельствует о том, что можно использовать
+как понятие частоты, так и периода сигнала. Вид спектров полученных в результате
+эксперимента имеет явно набор ярко выраженных частот (рис.~\ref{atu:f:relax1d_f_r1}),
+при этом первый пик и определяет частоту, и соответственно, период сигнала.
+При этом, для получения этих значений совершенно не обязательно
+проводить достаточно затратный Фурье-анализ сигнала --- достаточно
+измерить время, в которое укладывается достаточно большое количество периодов.
+
+\begin{figure}[htb!]
+  \centerline{\includegraphics[width=0.6\textwidth]{p/relax1d_f_r1=130k.png} }
+  \caption{Спектр сигнала $V_1(t)$ полученного в реальном эксперименте при $R_1=\SI{130}{\kilo\ohm}$}
+  \label{atu:f:relax1d_f_r1}
+\end{figure}
+
+При этом появляется возможность сравнения периодов не только
+экспериментальных и модельных результатов, но и полученных
+теоретически (\ref{atu:eq:T_u_relax}) при достаточно жёстких ограничениях.
+
+
+\begin{figure}[htb!]
+  \centerline{\includegraphics[width=0.6\textwidth]{p/relax1d_read_cmp-p_R1_T.png} }
+  \caption{Зависимости $T(R_1)$ в реальном эксперименте, полученной в результате моделирования, и теоретической (\ref{atu:eq:T_u_relax})}
+  \label{atu:f:relax1d_read_cmp-p_R1_T}
+\end{figure}
+
+Как видно из графиков, (рис.~\ref{atu:f:relax1d_read_cmp-p_R1_T}) результаты
+численного моделирования практически полностью совпадают с теоретически
+предсказанными. Отличие от эксперимента при этом не превышает 5\%,
+что достаточно неплохо, учитывая множество неучтённых в модели факторов.
+Таким образом, для одного генератора
+модель даёт хорошее совпадение с экспериментом, и может использоваться для
+дальнейших исследований.
+
+
+\Cmt{ модели в ``qontrol'' с тремя релаксаторами}
 
 \section{Критерии идентификации систем из трёх связанных релаксационных генераторов}
 
