Add relax3d visual comparison.

--- a/p7/relax_real.tex
+++ b/p7/relax_real.tex
@@ -999,8 +999,95 @@ $R_1$ будет подразумеваться сумма $R_1 + R_b$.
 модель даёт хорошее совпадение с экспериментом, и может использоваться для
 дальнейших исследований.
 
+Аналогичным способом сравнить результаты экспериментов и численного моделирования
+для системы из трёх связанных генераторов не предстваляется возможным.
+Даже для сложно-периодического режима визуальное сравнение формы колебаний
+не имеет смысла, а сложные спектры не дают возможности
+получить и сравнить завимимости частоты от какого-либо параметра.
+Практически единственным выходом является использование критериев идентификации,
+которые будут рассмотрены далее. Тем не менее, в качестве грубой предварительной
+проверки адекватности может служить опять-же визуальное сравнение зависимости формы
+аттракторов от параметра, а также характрерные особенности спектров.
 
-\Cmt{ модели в ``qontrol'' с тремя релаксаторами}
+Рассмотрим и сравним формы аттракторов для объекта и модели
+в случае слабо-связянного режима, при $R_b=\SI{10}{\kilo\ohm}$ (рис.~\ref{atu:f:relax3d_mo_v1v2v3m_03})
+
+\begin{figure}[htb!]
+  \centerline{
+    \hfill
+    \includegraphics[width=0.48\textwidth]{p/relax3_v1v2v3_03.png}
+    \hfill
+    \includegraphics[width=0.48\textwidth]{p/relax3d_read_q-p_v1v2v3m_03a.png}
+    \hfill
+  }
+  \caption{Аттрактры, полученные для объекта и модели при  $R_b=\SI{10}{\kilo\ohm}$}
+  \label{atu:f:relax3d_mo_v1v2v3m_03}
+\end{figure}
+
+Формы аттракторов в обеих случаях имеют одинаковую плотно заполненную форму.
+И у модели, и у объекта генераторы работают практически независимо,
+сигналы имеют линейчатые спектры (рис.~\ref{atu:f:relax3d_mo_f_03}),
+но более сложные, чем у независимых генераторов. Практически,
+это проверка режима, близкого к независимым генераторам, и
+результаты моделирования достаточно полно отображают этот факт.
+
+
+\begin{figure}[htb!]
+  \centerline{
+    \hfill
+    \includegraphics[width=0.48\textwidth]{p/relax3_f_03.png}
+    \hfill
+    \includegraphics[width=0.48\textwidth]{p/relax3d_read_q-p_fm_03a.png}
+    \hfill
+  }
+  \caption{Спектры сигнала $V_b(t)$ объекта и модели при  $R_b=\SI{10}{\kilo\ohm}$}
+  \label{atu:f:relax3d_mo_f_03}
+\end{figure}
+
+Для хаотичекого режима для аттракторов наблюдается только
+качественная схожесть (рис.~\ref{atu:f:relax3d_mo_v1v2v3m_17}).
+При дальнейшем росте значения параметра
+и у модели, и у объекта наблюдается вырожденное поведение.
+
+
+\begin{figure}[htb!]
+  \centerline{
+    \hfill
+    \includegraphics[width=0.48\textwidth]{p/relax3_v1v2v3_17.png}
+    \hfill
+    \includegraphics[width=0.48\textwidth]{p/relax3d_read_q-p_v1v2v3m_17a.png}
+    \hfill
+  }
+  \caption{Аттрактры, полученные для объекта и модели при  $R_b=\SI{45.5}{\kilo\ohm}$}
+  \label{atu:f:relax3d_mo_v1v2v3m_17}
+\end{figure}
+
+Спектры модели и объекта в этом режимк достаточно схожи именно из-за
+своей сплошности и нерегулярности (рис.~\ref{atu:f:relax3d_mo_f_17}).
+Выделить какую-то доминирующую частоту не представляется возможным,
+хотя определённые пики на фоне сплошного спектра вполне различимы.
+
+\begin{figure}[htb!]
+  \centerline{
+    \hfill
+    \includegraphics[width=0.48\textwidth]{p/relax3_f_17.png}
+    \hfill
+    \includegraphics[width=0.48\textwidth]{p/relax3d_read_q-p_fm_17a.png}
+    \hfill
+  }
+  \caption{Спектры сигнала $V_b(t)$ объекта и модели при  $R_b=\SI{45.5}{\kilo\ohm}$}
+  \label{atu:f:relax3d_mo_f_17}
+\end{figure}
+
+Также слежует отметить, что несмотря на похожесть аттракторов и спектров
+объекта и модели при определённых значениях параметра,
+моменты переключения между режимами, и само количество таких переключений
+соблюдаются весмь приюлизительно. Такое поведение характрерно для систем хаотическо динамики,
+когда не только малые изменения в параметрах или начальных условиях приводят
+к разбеганию траекторий, но и обчно пренебрежимо малые отличия в структуре модели приводят
+к аналогичному результату.
+
+
 
 \section{Критерии идентификации систем из трёх связанных релаксационных генераторов}
 
