Add ''relax1ds'' research

--- a/p7/relax_real.tex
+++ b/p7/relax_real.tex
@@ -949,20 +949,23 @@ $V_b \gg V_i$ токами утечки можно пренебречь совс
 отслеживать сигнал $V_b(t)$, и в этом эксперименте под величиной
 $R_1$ будет подразумеваться сумма $R_1 + R_b$.
 
-При проведении проверки адекватности была проведена серия экспериментов
+При проведении проверки адекватности была проведена серия экспериментов для
+одного генератора ``relax1d''
 при различных значения $R_1$. В первую очередь было проведено визуальное сравнение
 сигналов $V_{1o}(t)$ и $V_{1m}(t)$. Результаты сравнения (пример см.~рис.~\ref{atu:f:relax1d_read_cmp-p_t_r1})
 с одной стороны, показывают, что в целом, форма сигналов сигналов достаточно хорошо совпадают,
 с учётом разности фаз, которая в реальном эксперименте никак не контролировалась. С другой стороны,
 этот график позволяет определить уровень шумов измерения, размах которых
 составляет порядка $\SI{20}{\milli\volt}$, что для рассматриваемых условий
-является вполне допустимым.
+является вполне допустимым. Безразмерная величина $v\Tidx{on}$,
+характеризующая нелинейность процесса (\ref{atu:eq:v_u_relax}),
+составила $0.128$, что подтверждается близким к линейному графику процесса зарядки.
 
 
 
 \begin{figure}[htb!]
   \centerline{\includegraphics[width=0.6\textwidth]{p/relax1d_read_cmp-p_t_r1=130k.png} }
-  \caption{Зависимости $V_1(t)$ полученные в реальном эксперименте, в сравнении результатами моделирования при $R_1=\SI{130}{\kilo\ohm}$ }
+  \caption{Зависимости $V_1(t)$ полученные в реальном эксперименте ``relax1d'', в сравнении результатами моделирования при $R_1=\SI{130}{\kilo\ohm}$ }
   \label{atu:f:relax1d_read_cmp-p_t_r1}
 \end{figure}
 
@@ -976,7 +979,7 @@ $R_1$ будет подразумеваться сумма $R_1 + R_b$.
 
 \begin{figure}[htb!]
   \centerline{\includegraphics[width=0.6\textwidth]{p/relax1d_f_r1=130k.png} }
-  \caption{Спектр сигнала $V_1(t)$ полученного в реальном эксперименте при $R_1=\SI{130}{\kilo\ohm}$}
+  \caption{Спектр сигнала $V_1(t)$ полученного в реальном эксперименте ``relax1d'' при $R_1=\SI{130}{\kilo\ohm}$}
   \label{atu:f:relax1d_f_r1}
 \end{figure}
 
@@ -987,9 +990,11 @@ $R_1$ будет подразумеваться сумма $R_1 + R_b$.
 
 \begin{figure}[htb!]
   \centerline{\includegraphics[width=0.6\textwidth]{p/relax1d_read_cmp-p_R1_T.png} }
-  \caption{Зависимости $T(R_1)$ в реальном эксперименте, полученной в результате моделирования, и теоретической (\ref{atu:eq:T_u_relax})}
+  \caption{Зависимости $T(R_1)$ в реальном эксперименте ``relax1d'', полученной в результате моделирования, и теоретической (\ref{atu:eq:T_u_relax})}
   \label{atu:f:relax1d_read_cmp-p_R1_T}
 \end{figure}
+
+% TODO: more R_1: measure again
 
 Как видно из графиков, (рис.~\ref{atu:f:relax1d_read_cmp-p_R1_T}) результаты
 численного моделирования практически полностью совпадают с теоретически
@@ -999,18 +1004,72 @@ $R_1$ будет подразумеваться сумма $R_1 + R_b$.
 модель даёт хорошее совпадение с экспериментом, и может использоваться для
 дальнейших исследований.
 
+При росте $R_1$ до величины порядка $\SI{420}{\kilo\ohm}$
+наблюдался срыв генерации и переход в режим стабилизации.
+Экстраполируя полученные результаты, можно ожидать,
+что в системе с тремя такими генераторами аналогичные явления должны наблюдаться
+при $R_b \approx \SI{100}{\kilo\ohm}$.
+
+При использовании в качестве переключающего элемента одного генератора
+триггера Шмидта (обозначим как ``relax1ds''), были получены аналогичные результаты,
+но с определёнными отличиями. Форма колебаний
+имеет менее линейный вид, что обусловлено несколько большим значением
+безразмерной величины $v\Tidx{on} \approx 0.3$.
+
+\begin{figure}[htb!]
+  \centerline{\includegraphics[width=0.6\textwidth]{p/relax1ds_read_cmp-p_t_r1=200k.png} }
+  \caption{Зависимости $V_1(t)$ полученные в реальном эксперименте ``relax1ds'', в сравнении результатами моделирования при $R_1=\SI{200}{\kilo\ohm}$ }
+  \label{atu:f:relax1ds_read_cmp-p_t_r1}
+\end{figure}
+
+Спектр сигнала $V_1(t)$ имеет совершенно аналогичный вид (рис.~\ref{atu:f:relax1ds_f_r1}),
+за исключением того, что из-за большего доступного значения $R_1$,
+а следовательно, меньшей частоты, относительная разрешающая способность
+численного преобразования Фурье оказалась меньше, чем в предыдущем случае.
+Тем не менее вид спектра позволяет определить и измерить период.
+
+\begin{figure}[htb!]
+  \centerline{\includegraphics[width=0.6\textwidth]{p/relax1ds_f_200000.png} }
+  \caption{Спектр сигнала $V_1(t)$ полученного в реальном эксперименте ``relax1ds'' при $R_1=\SI{200}{\kilo\ohm}$}
+  \label{atu:f:relax1ds_f_r1}
+\end{figure}
+
+Существенным отличием данного генератора от схемы с двумя биполярными транзисторами
+является тот факт, что не происходит срыв генерации при существенном росте $R_1$.
+В экспериментах генерация наблюдалась даже при $R_1 = \SI{9}{\mega\ohm}$,
+что практически не отличается от входного сопротивления измерительных цепей.
+Поэтому, следующий график представлен для существенно большего диапазона величины $R_1$.
+
+Зависимости экспериментального, модельного и теоретического периодов
+от величины $R_1$ представлены на рис.~\ref{atu:f:relax1ds_read_cmp-p_R1_T}.
+
+
+\begin{figure}[htb!]
+  \centerline{\includegraphics[width=0.6\textwidth]{p/relax1ds_read_cmp-p_R1_T.png} }
+  \caption{Зависимости $T(R_1)$ в реальном эксперименте ``relax1ds'', полученной в результате моделирования, и теоретической (\ref{atu:eq:T_u_relax})}
+  \label{atu:f:relax1ds_read_cmp-p_R1_T}
+\end{figure}
+
+За исключением одной точки, разница между экспериментальными и модельными значениями
+меньше, чем для системы ``relax1d''. При этом наблюдается малое,
+но всё же заметное расхождение между теоретически и модельными значениями.
+В первую очередь, это связано с тем, что модель, помимо явлений,
+описанных в теоретическом приближении, учитывает также токи утечки,
+что становится более заметным при росте $R_1$.
+
+
 Аналогичным способом сравнить результаты экспериментов и численного моделирования
-для системы из трёх связанных генераторов не предстваляется возможным.
+для системы из трёх связанных генераторов не представляется возможным.
 Даже для сложно-периодического режима визуальное сравнение формы колебаний
 не имеет смысла, а сложные спектры не дают возможности
-получить и сравнить завимимости частоты от какого-либо параметра.
+получить и сравнить зависимости частоты от какого-либо параметра.
 Практически единственным выходом является использование критериев идентификации,
 которые будут рассмотрены далее. Тем не менее, в качестве грубой предварительной
 проверки адекватности может служить опять-же визуальное сравнение зависимости формы
-аттракторов от параметра, а также характрерные особенности спектров.
+аттракторов от параметра, а также характерные особенности спектров.
 
-Рассмотрим и сравним формы аттракторов для объекта и модели
-в случае слабо-связянного режима, при $R_b=\SI{10}{\kilo\ohm}$ (рис.~\ref{atu:f:relax3d_mo_v1v2v3m_03})
+Рассмотрим и сравним формы аттракторов для объекта ``relax3d'' и его модели
+в случае слабо-связанного режима, при $R_b=\SI{10}{\kilo\ohm}$ (рис.~\ref{atu:f:relax3d_mo_v1v2v3m_03})
 
 \begin{figure}[htb!]
   \centerline{
@@ -1020,7 +1079,7 @@ $R_1$ будет подразумеваться сумма $R_1 + R_b$.
     \includegraphics[width=0.48\textwidth]{p/relax3d_read_q-p_v1v2v3m_03a.png}
     \hfill
   }
-  \caption{Аттрактры, полученные для объекта и модели при  $R_b=\SI{10}{\kilo\ohm}$}
+  \caption{Аттракторы, полученные для объекта и модели при  $R_b=\SI{10}{\kilo\ohm}$}
   \label{atu:f:relax3d_mo_v1v2v3m_03}
 \end{figure}
 
@@ -1044,7 +1103,7 @@ $R_1$ будет подразумеваться сумма $R_1 + R_b$.
   \label{atu:f:relax3d_mo_f_03}
 \end{figure}
 
-Для хаотичекого режима для аттракторов наблюдается только
+Для хаотического режима для аттракторов наблюдается только
 качественная схожесть (рис.~\ref{atu:f:relax3d_mo_v1v2v3m_17}).
 При дальнейшем росте значения параметра
 и у модели, и у объекта наблюдается вырожденное поведение.
@@ -1058,11 +1117,11 @@ $R_1$ будет подразумеваться сумма $R_1 + R_b$.
     \includegraphics[width=0.48\textwidth]{p/relax3d_read_q-p_v1v2v3m_17a.png}
     \hfill
   }
-  \caption{Аттрактры, полученные для объекта и модели при  $R_b=\SI{45.5}{\kilo\ohm}$}
+  \caption{Аттракторы, полученные для объекта и модели при  $R_b=\SI{45.5}{\kilo\ohm}$}
   \label{atu:f:relax3d_mo_v1v2v3m_17}
 \end{figure}
 
-Спектры модели и объекта в этом режимк достаточно схожи именно из-за
+Спектры модели и объекта в этом режиме достаточно схожи именно из-за
 своей сплошности и нерегулярности (рис.~\ref{atu:f:relax3d_mo_f_17}).
 Выделить какую-то доминирующую частоту не представляется возможным,
 хотя определённые пики на фоне сплошного спектра вполне различимы.
@@ -1079,12 +1138,12 @@ $R_1$ будет подразумеваться сумма $R_1 + R_b$.
   \label{atu:f:relax3d_mo_f_17}
 \end{figure}
 
-Также слежует отметить, что несмотря на похожесть аттракторов и спектров
+Также следует отметить, что несмотря на похожесть аттракторов и спектров
 объекта и модели при определённых значениях параметра,
 моменты переключения между режимами, и само количество таких переключений
-соблюдаются весмь приюлизительно. Такое поведение характрерно для систем хаотическо динамики,
+соблюдаются весьма приблизительно. Такое поведение характерно для систем хаотической динамики,
 когда не только малые изменения в параметрах или начальных условиях приводят
-к разбеганию траекторий, но и обчно пренебрежимо малые отличия в структуре модели приводят
+к разбеганию траекторий, но и обычно пренебрежимо малые отличия в структуре модели приводят
 к аналогичному результату.
 
 
