Relad3d? : dependecies e(params)

--- a/p7/relax_real.tex
+++ b/p7/relax_real.tex
@@ -1581,8 +1581,113 @@ $p_{ee}$.
 метод, с учётом того факта, что значения идентифицируемого
 параметра заранее не известны.
 
+Рассмотрим завивсимости ошибок идентификации от параметров самой системы идентификации.
+В первую очередь следует рассмотреть влияние параметра $a_q$,
+определяющего частотные свойства фильтра значений критерия.
+На рис.~\ref{atu:f:relax3ds_read_id2_prm_0-p_a_q} представлены полученные зависимости
+для системы ``'relax3ds'.
+
+\begin{figure}[htb!]
+  \centerline{\includegraphics[width=0.6\textwidth]{p/relax3ds_read_id2_prm_0-p_a_q.png} }
+  \caption{Зависимости $\overline{e}_{r*}(a_q)$ при идентификации системы ``relax3ds''}
+  \label{atu:f:relax3ds_read_id2_prm_0-p_a_q}
+\end{figure}
+
+Сравнение полученной зависимости со спектрами генератора показывает,
+что для проведения идентификациидостаточно подавить только
+основные частоты. Дальнейший медленный рост ошибок
+идентфикации связан с замедлением реаакии сисемы на перестройку идентифицируемого параметра.
+
+Следующий важные параметр системы идентификации --- $q_\gamma$
+определяет чувствительность каждого агента. Соответствующие зависимости приведены на
+рис.~\ref{atu:f:relax3ds_read_id2_prm_0-p_q_gamma}.
 
 
+\begin{figure}[htb!]
+  \centerline{\includegraphics[width=0.6\textwidth]{p/relax3ds_read_id2_prm_0-p_q_gamma.png} }
+  \caption{Зависимости $\overline{e}_{r*}(q_\gamma)$ при идентификации системы ``relax3ds''}
+  \label{atu:f:relax3ds_read_id2_prm_0-p_q_gamma}
+\end{figure}
+
+Представленные завивсимости совершенно аналогичны таковым
+для множества рассмотренных процессов идентификации.
+Высокие значения ошибок в левой части графика соответствуют
+ибыточной чувствительности функции качества, а отностительно медленный
+рост в правой части графика --- наоборот, недостаточной.
+ПРи этом недостаточная чувствительность частично компенсируется способом
+определения величины $p_e$. % TODO: ref
+Наилучшим образом эта компентация работает при использовании $p_{ee}$,
+а наихудшим - при $p_{ge}$, когда в результате учитывается влияние практически всех
+агентов.
+
+Влияние параметра $v_f$, одного из основних, определяющих динамику поисковых агентов,
+представлено на рис.~\ref{atu:f:relax3ds_read_id2_prm_0-p_v_f}.
+
+\begin{figure}[htb!]
+  \centerline{\includegraphics[width=0.6\textwidth]{p/relax3ds_read_id2_prm_0-p_v_f.png} }
+  \caption{Зависимости $\overline{e}_{r*}(v_f)$ при идентификации системы ``relax3ds''}
+  \label{atu:f:relax3ds_read_id2_prm_0-p_v_f}
+\end{figure}
+
+Значения при $v_f = 0$ соответствуют неподвижным агентам.
+Дальнешее медленное уменьшнние ошибок идентификации
+обусловлено двумя противодйствующими факторами.
+Первый --- уменьшение ошибки из-за более быстрого
+смещения агентов после скачка параметра.
+Второй, противоволжного действия --- увеличение амплитуды блуждания
+агентов из-за нарушения устойчивости поиска. Тем не менее,
+каждый поисковый агент в кассметриваемом методе
+имеет ограниченную область перемещения,
+что обеспечивает устойчивость метода в целом, даже при
+неусточивости динамики одного объекта.
+% TODO: может это перенести в главу 3?
+
+Следующий параметр --- $k_e$ --- также влияет на динамику
+агента, но учитывается только ``стремление'' агента
+к предполагаемому экстремуму. Следовательно,
+график должее походить на предыдущий, что и подтвержжается результатами моделирования
+(рис.~\ref{atu:f:relax3ds_read_id2_prm_0-p_k_e}).
+
+\begin{figure}[htb!]
+  \centerline{\includegraphics[width=0.6\textwidth]{p/relax3ds_read_id2_prm_0-p_k_e.png} }
+  \caption{Зависимости $\overline{e}_{r*}(k_e)$ при идентификации системы ``relax3ds''}
+  \label{atu:f:relax3ds_read_id2_prm_0-p_k_e}
+\end{figure}
+
+Влияние параметра $k_c$ на динамику агента имеет несколько другую природу
+(рис.~\ref{atu:f:relax3ds_read_id2_prm_0-p_k_c}).
+При малых значениях этого параметра движение агента в пределах
+своей ``полосы'' ограничивается только взаимодействием с соседями,
+что приводит коллективным сещениям агентов.
+Высокие значания этого параметра существенно ограничивают
+возможность смещения агентов, что естественно приводит
+к увеличению ошибки идентификации. Таким образом,
+для этого параметра существует значение,
+при котором ошибка идентификации минимальна. При этом,
+само влияние этого параметра весьма незначительно.
+
+\begin{figure}[htb!]
+  \centerline{\includegraphics[width=0.6\textwidth]{p/relax3ds_read_id2_prm_0-p_k_cl.png} }
+  \caption{Зависимости $\overline{e}_{r*}(k_c)$ при идентификации системы ``relax3ds''}
+  \label{atu:f:relax3ds_read_id2_prm_0-p_k_c}
+\end{figure}
+
+Зависимость ошибки идентификации от параметра $k_n$
+тпкже имеет экстремальный характер,
+и так же слабо выражена
+(рис.~\ref{atu:f:relax3ds_read_id2_prm_0-p_k_n}).
+Более того, из-за того, что крайние можели имеют фиксированное значение параметров,
+а количество агентов невелико (5), этот параметр играет
+не только роль ограничителя ``скученности'' агентов,
+но и ``помогает'' предыдущему параметру,
+``привязывая'' подвижные модели к неподвижным.
+
+
+\begin{figure}[htb!]
+  \centerline{\includegraphics[width=0.6\textwidth]{p/relax3ds_read_id2_prm_0-p_k_cn.png} }
+  \caption{Зависимости $\overline{e}_{r*}(k_n)$ при идентификации системы ``relax3ds''}
+  \label{atu:f:relax3ds_read_id2_prm_0-p_k_n}
+\end{figure}
 
 \section{Выводы по разделу \thechapter}
 
@@ -1618,9 +1723,14 @@ $p_{ee}$.
     хорошую работоспособность.
 
   \item
-    Зависимости удельных ошибок идентификации \Cmt{TODO}
+    Зависимости удельных ошибок идентификации от параметров системы идентификации
+    имеют характерный для рассматриваемых систем идентификации вид.
 
   \item
+    Значения параметров $v_f$, $k_e$, $k_c$, $k_n$
+    можно варьировать в широком диапазоне, без существенного
+    ухудшения качества идентификации. Это наблюдение подчёркивает
+    адаптивные свойства ансамблевых поисковых методов.
 
 \end{itemize}
 
