Add board pic for Colpitts

--- a/p6/colp_real.tex
+++ b/p6/colp_real.tex
@@ -30,12 +30,19 @@
 обеспечения стабильности определённых потенциалов схемы.
 
 \begin{figure}[htb!]
-\centerline{\includegraphics[width=0.7\textwidth]{p/colp_schem_real.png} }
+\centerline{\includegraphics[width=0.8\textwidth]{p/colp_schem_real.png} }
 \caption{Электрическая схема реального генератора Колпитца, используемого в данной работе}
 \label{atu:f:colp_schem_real}
 \end{figure}
 
-Картинка платы.
+Внешний вид cобранной схемы на печатной плате представлен на~(рис.~\ref{atu:f:relax3d_board}).
+
+\begin{figure}[htb!]
+\centerline{\includegraphics[width=0.5\textwidth]{p/colp_board.jpg} }
+\caption{Печатная плата схемы генератора Колпитца}
+\label{atu:f:colp_board}
+\end{figure}
+
 
 Описание дополнительных элементов.
 
