--- a/p7/relax_real.tex
+++ b/p7/relax_real.tex
@@ -1581,11 +1581,11 @@ $p_{ee}$.
 метод, с учётом того факта, что значения идентифицируемого
 параметра заранее не известны.
 
-Рассмотрим завивсимости ошибок идентификации от параметров самой системы идентификации.
+Рассмотрим зависимости ошибок идентификации от параметров самой системы идентификации.
 В первую очередь следует рассмотреть влияние параметра $a_q$,
 определяющего частотные свойства фильтра значений критерия.
 На рис.~\ref{atu:f:relax3ds_read_id2_prm_0-p_a_q} представлены полученные зависимости
-для системы ``'relax3ds'.
+для системы ``'relax3ds''.
 
 \begin{figure}[htb!]
   \centerline{\includegraphics[width=0.6\textwidth]{p/relax3ds_read_id2_prm_0-p_a_q.png} }
