Add denotations list and PDF link.
Adn general revive.

--- a/atudiss.tex
+++ b/atudiss.tex
@@ -55,6 +55,8 @@
 
 
 % ----------------------------------------------------------------------------------------------------
+\input{denotations.tex}
+
 \subimport{p0/}{p0.tex} % p0/p0.tex  % введение
 
 \subimport{p1/}{p1.tex} % p1/p1.tex  % обзор
