--- a/p0/p0.tex
+++ b/p0/p0.tex
@@ -1,7 +1,8 @@
+\phantomsection
 \chapter*{Введение}
 
 \paragraph{Актуальность темы}.
-В настоящее время ...
+\pdfbookmark[1]{Актуальность темы}{actualitybookmark}
 
 Синтез систем идентификации для сложных нелинейных динамических систем
 был и остаётся сложной задачей. Невозможность определения
@@ -16,9 +17,11 @@
 учитывающего динамику системы и зависящего от идентифицируемых параметров.
 
 \paragraph{Связь работы с научными программами, планами, темами.}
+\pdfbookmark[1]{Связь работы с ...}{sciencelinkbookmark}
 Диссертационная работы выполнялась в соответствии с 
 
 \paragraph{Цель и задания исследования.}
+\pdfbookmark[1]{Цель и задания исследования}{aimandtaskbookmark}
 Целью диссертационной работы является
 
 Достижение этой цели требует решения следующих задач:
@@ -55,6 +58,7 @@
 
 \end{itemize}
 
+\pdfbookmark[1]{Объект исследования}{objectresearchbookmark}
 \textit{Объект исследования} ---
 системы адаптивно-поисковой идентификации систем хаотической динамики.
 
@@ -69,6 +73,7 @@
 теория информации
 \ldots
 
+\pdfbookmark[1]{Научная новизна}{scinewbookmark}
 \paragraph{Научная новизна результатов диссертационной работы} заключается в
 развитии теории
 
@@ -88,12 +93,15 @@
 
 
 \paragraph{Практическое значение полученных результатов.}
+\pdfbookmark[1]{Практическое значение}{practicalusagebookmark}
 Разработанные методы исследования и математические модели
 
 Все результаты внедрения подтверждены соответствующими актами
 (Приложение А).
 
-\paragraph{Личный вклад соискателя.} Все результаты диссертационной работы
+\paragraph{Личный вклад соискателя.}
+\pdfbookmark[1]{Личный вклад}{personaladdbookmark}
+Все результаты диссертационной работы
 получены автором самостоятельно и опубликованы в работах [].
 В работах, опубликованных в соавторстве, автору
 принадлежат следующие результаты:
