--- a/titul.tex
+++ b/titul.tex
@@ -1,4 +1,7 @@
 \thispagestyle{empty}
+% \hyperref[titul]{Titul}
+\phantomsection
+\pdfbookmark[0]{Titil}{titulbookmark}
 \Xmaketitle
 % \begin{center}
 % \institution
