--- a/denotations.tex
+++ b/denotations.tex
@@ -11,6 +11,11 @@
 
 \begin{description}
 
+  \item[$u(t)$]  -- вход объекта и моделей, $[U]$;
+
+  \item[$\mathbf{x}(t)$]  -- выход объекта и моделей, при необходимости разбивается на скалярные компоненты:
+     $x(t)$, $y(t)$, $z(t)$ \ldots, $[X]$;
+
   \item[$q(p)$]  -- зависимость значения критерия идентификации от параметра в стационарном случае, $[Q]$;
 
   \item[$q_o(t)$, $q_m(t)$]  -- мгновенные значения критерия для объекта и модели соответственно, $[P]$;
@@ -37,11 +42,13 @@
 
   \item[$\gamma = \frac{1}{q_\gamma} $]  -- чувствительность функции качества, $[Q^{-1}]$;
 
-  \item[$ $]  -- x;
+  \item[$q_\beta = \frac{q_\gamma}{\beta} $]  -- рабочий диапазон функции качества в простанстве параметра, $[P]$.
 
-  \item[$ $]  -- x;
+  \item[$\frac{q_\gamma}{\Delta q} $]  -- x;
 
-  \item[$ $]  -- x;
+  \item[$\frac{q_\gamma}{(N-1)\Delta q} $]  -- x;
+
+  \item[$N$]  -- количесво агентов, может быть с индексом -- тогда водль одной координаты;
 
   \item[$ $]  -- x;
 
